# jsonrpc-c

./: LICENSE  README.md  configure.ac
example/: Makefile.am  server.c
include/: Makefile.am  jsonrpc-c.h
src/: Makefile.am  jsonrpc-c.c
